computed-semver/engine-fixtures/v7.0.0/stamp-posture/patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-claims
  namespace: default
  labels:
    "policy-as-versioned.dev/policy-version": "7.0.0"
    "posture.acme.io/version": "7.0.0"
spec:
  containers: [{ name: app, image: nginx }]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-forger
  namespace: default
  labels:
    "policy-as-versioned.dev/policy-version": "7.0.0"
    "posture.acme.io/version": "7.0.0"
spec:
  containers: [{ name: app, image: nginx }]
